== Version 1.1 [8 June 2011] ==
*User defer and async attributes on the script element. Requires Joomla 1.6.1.
*Fix some minor issues for the JED.

== Version 1.0 [9 Feburary 2011] ==
*Initial release