@@ -1,3 +1,5 @@
+*Add the event onIsTracking. This enabled other extensions to determine whether tracking is active for this request or not.
+
 == Version 1.1 [8 June 2011] ==
 *User defer and async attributes on the script element. Requires Joomla 1.6.1.
 *Fix some minor issues for the JED.
